# Kala

./: .gitignore  CLAUDE.md  CMakeLists.txt  Claude-companion.md  Claude-sounit-builder.md  Kala.pro  Makefile  Makefile.Debug  Makefile.Release  README.md  attackgenerator.cpp  attackgenerator.h  audiodevicenotifier.cpp  audiodevicenotifier.h  audioengine.cpp  audioengine.h  bandpasseq.cpp  bandpasseq.h  bowedmodel.cpp  bowedmodel.h  breathturbulence.cpp  breathturbulence.h  canvas.cpp  canvas.h  combfilter.cpp  combfilter.h  companionpanel.cpp  companionpanel.h  compositionsettings.cpp  compositionsettings.h  compositionsettingsdialog.cpp  compositionsettingsdialog.h  container.cpp  container.h  container.ui  containersettings.cpp  containersettings.h  curve.cpp  curve.h  dialogNewProject.ui  (+135 more)
.claude/: settings.local.json
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: QAbstractButton.3B3416F1D13DD829.idx  QActionGroup.EE7E5CFA8872FF80.idx  QCloseEvent.8F28E83DBC3FC96D.idx  QCursor.A8ACCC858495E9E7.idx  QDataStream.6E037E45F7AD3976.idx  QDial.D2ECC2CBB86D1113.idx  QListWidgetItem.F83803E30D75D923.idx  QMoveEvent.A728546A21D1C5EA.idx  QPoint.6D7AC22283C81AC1.idx  QProgressBar.F3ED042BAA56FB2C.idx  QRegularExpression.1EA14752E11AB3BC.idx  QResizeEvent.4093C803F31DE505.idx  QScrollBar.5448EA79C21E6D94.idx  QSet.5B6B3DE3F771681F.idx  QShowEvent.5F41CBFBC0574D0A.idx  QTimer.98A480E0C78BA6EE.idx  QToolButton.BECB5BD70F2D77CD.idx  QUndoCommand.ED2F6C5D0509E78A.idx  QUndoStack.1C73B6AC369C0C89.idx  QVector.56B430278ECD14BB.idx  QtConcurrent.FA37EAAECECA029F.idx  QtConcurrentDepends.5225EC80AD51C2E9.idx  QtCore.5D0538578ED5C7AD.idx  RtAudio.cpp.C1635D94161543DE.idx  RtAudio.h.61E8A8421AFAA8FC.idx  apinames.cpp.4EAC482E44D5DD94.idx  asio.h.77D371D18E329F3C.idx  asiodrivers.cpp.E76B1AC71A242DEF.idx  asiodrivers.h.9F8D1F79BA05B37A.idx  asiodrvr.h.D146A5287D287E66.idx  asiolist.cpp.A8A19BBAD4815A10.idx  asiosys.h.05A41A50ACFA523C.idx  atomic_futex.h.D2F50896D5BD58AF.idx  audiodevicenotifier.h.2D90831FEB05BC64.idx  audioengine.cpp.03C1AA2904E47C84.idx  audioengine.h.A0896B039C8AE02B.idx  bowedmodel.h.9932F7C720A62AE5.idx  breathturbulence.h.B88CC49FEF1C0764.idx  canvas.cpp.B0C6D5F354EDC26D.idx  canvas.h.A67A7D0C554197BC.idx  (+331 more)
debug/: object_script.Calamus.Debug
help/: formant-body.html  ir-convolution.html  karplus-strong.html  keyboard-shortcuts.html  settings.html  spectrum-blender.html  style.css  wavetable-synth.html
release/: object_script.Calamus.Release
scripts/: build_help.sh  generate_all_docs.sh  generate_docs.py  package.sh  research_container.sh
